tests/invalid/fe_unmapped_verbose.err_exp
fe_unmapped_verbose.m:050: In `:- pragma foreign_enum' declaration for type
fe_unmapped_verbose.m:050:   `shade_of_white'/0:
fe_unmapped_verbose.m:050:   error: the following constructors [38;5;203mdo not have a[39;49m
fe_unmapped_verbose.m:050:   [38;5;203mforeign value:[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`blond',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`cornsilk',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`cosmic_latte',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`cream',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`eggshell',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`floral_white',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`ghost_white',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`honeydew',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`isabelline',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`ivory',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`lavender_blush',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`lemon_chiffon',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`linen',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`magnolia',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`mint_cream',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`navajo_white',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`old_lace',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`papaya_whip',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`peach',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`pearl',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`seashell',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`snow',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`splashed_white',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`vanilla',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`white',[39;49m
fe_unmapped_verbose.m:050:     [38;5;203m`white_smoke'.[39;49m
